core fix 53
git-svn-id: svn://127.0.0.1/Core@10701 17c802ae-cbca-534c-9e8e-6d19a4926c45